some refinement to the CV

--- a/cv-VahidEtemadi.tex
+++ b/cv-VahidEtemadi.tex
@@ -37,54 +37,53 @@
 % \sep inserts a | between items. 
 % You can use FontAwesome icons and use \FAspace after a font awesome icon to
 % insert a predefined horizontal space after a font awesome icon icon.
-\header{roald}{ruiter}{%
-  \faMapMarker \FAspace Street 123 \sep 1234 AB City \sep Country}{%
-  \faMobile \FAspace +31 612 345 678 \sep% 
-  \faEnvelope \FAspace johndoe@gmail.com \sep% 
-  \faLinkedinSquare /in/johndoe \sep%
-  \faGithub /johndoe %
+\header{Vahid}{Etemadi}{%
+  \faMapMarker \FAspace Modaress BLVD \sep Shiraz \sep Iran}{%
+  \faMobile \FAspace +98 654 433 074 \sep% 
+  \faEnvelope \FAspace vetemadi87@gmail.com \sep% 
+  \faLinkedinSquare /in/vahidetemadi \sep%
+  \faGithub /vahid133 %
   }
 
 % Add a picture to the top right of the page. Comment or delete if you do not 
 % want a picture
-\photo{sharelatex}
+\photo{Vahid}
 
-\textit{Fancy quote here or a short description of you.}
+\textit{Make at least one definite move daily towards your goal. (Bruce Lee)}
 
 \section*{education}
 % Use tabularcv environment to make a two column environment. The left column 
 % is for the dates, the right one is for details of your education for example. 
 % You can use the command \worktitle{Study name/Job title}{Location}.
 \begin{tabularcv}
-2012-2016   &   \worktitle{Master Physics}{University of City (NL)}
-                \newline Did awesome physics things.
+2012-2016   &   \worktitle{PhD Information Technology}{Shiraz University of Technology (SUTECH)}
+                \newline Software Change Management as A Service: A Self Adaptive Approach.
                 \begin{itemize}
-                  \item I did this 
-                  \item Learned that
-                  \item Also did that
+                  \item Propose a New Method for Task Assignment Problem during Software Development  
+                  \item Design and Implement a Self-Adaptive Task Assignment Reduce the Cost of Project over Time 
+                  \item Taking into Account The New Metric, Information Diffusion, in Task Assignment
                 \end{itemize} 
                 \\
-                
-2010-2012   &   \worktitle{Bachelor Physics}{University of City (NL)}
-                \newline Thesis title: Confined particle systems in
-                n-dimensions.
+                \\
+2012-2014   &   \worktitle{Master Information Technology}{K.N.Toosi University of Technology (KNTU)}
+				\newline Thesis title: Improving Recommendation System in Social Network with Profile Mining 
+                \\
+                \\
+2008-2012   &   \worktitle{Bachelor Information Technology}{Shiraz University of Technology (SUTECH)}
+           		\newline Thesis title: Service and Content Distribution in Cloud Computing Environments.
 \end{tabularcv}
 
 \section*{work}
 \begin{tabularcv}
-2013-2016   &   \worktitle{R\&D engineer}{Company 123 (NL)}
-                \newline Project management and designing of bridge
-                components.
+2015-2017   &   \worktitle{Software Full Stack Developer}{Company ASAN (Iran)}
+                \newline Developing Software for Internet Service Provider Company
                 \begin{itemize}
                 % Example use of *maincolor* and *secondcolor* in the main document.    
-                  \item Managing projects
-                  \item Measuring
-                  \item Proof of concept realisation
+                  \item Developing and Maintaining SQL Server Database
+                  \item Implement the Main Process Behind Internet Service Provider Company
+                  \item Design and Implement Report Dashboards
                 \end{itemize} 
-                \\
-                
-2012-2013   &   \worktitle{Software engineer}{Software United (NL)}
-                \newline Programming in Python and C++.
+              	\\
 \end{tabularcv}   
 
 \section*{awards}
@@ -95,20 +94,24 @@
 \end{tabularcv}
 
 \section*{software skills}
-Python, C++, Microsoft Office, Adobe Photoshop.
+Programing Languages: Java, C\#, JavaScript
 
-Operating systems: Windows, OSX, Linux.
+Databases: 
+
+Operating systems: Windows, Linux.
+
+Software Design Tools: 
+
 
 \section*{languages}
 \begin{tabularcv}
-Dutch       &	Mother tongue \\
+Persian     &	Mother tongue \\
 English     &  	Excellent, C2 \\
-German      &  	Intermediate, B2 \\
-Swahili     &  	Intermediate, B1
+Spanish     &   Starting \\
 \end{tabularcv}
 
 \section*{interests}
-Bowling, cats, hot food.
+Soccer, Ping-Pong, Language Exchange Meetups, Watching Movies.
     
 \end{document}
 
