made some changes

--- a/cv-VahidEtemadi.tex
+++ b/cv-VahidEtemadi.tex
@@ -73,7 +73,7 @@
            		\newline Thesis title: Service and Content Distribution in Cloud Computing Environments.
 \end{tabularcv}
 
-\section*{work}
+\section*{work experience}
 \begin{tabularcv}
 2015-2017   &   \worktitle{Software Full Stack Developer}{Company ASAN (Iran)}
                 \newline Developing Software for Internet Service Provider Company
@@ -86,32 +86,38 @@
               	\\
 \end{tabularcv}   
 
+\iffalse
 \section*{awards}
 % Use \link{URL} to place an link. It inserts a fontawsome logo, where the color is determined from the color harmony settings.
 \begin{tabularcv}	
 2010        &   Winner of \emph{Turing} contest in Lancaster 
                 ($\pm$ 431 contenders). \link{http://someurl.com/}
 \end{tabularcv}
+\fi
+\section*{skills}
+\begin{tabularcv}
+Programming Languages & Java, C\#, Python (intermediate)\\
 
-\section*{software skills}
-Programing Languages: Java, C\#, JavaScript
+Web &  JavaScript, CSS, HTML5\\
 
-Databases: 
+Databases & MS SQL server, MySQL, Elasticsearch\\
 
-Operating systems: Windows, Linux.
+Operating systems & Windows, Linux\\
 
-Software Design Tools: 
+Software Design Tools & Visual Paradigm\\
 
+Software Development Frameworks & .NET framework, Django (intermediate)\\
 
+Cloud & Docker
+\end{tabularcv}
 \section*{languages}
 \begin{tabularcv}
-Persian     &	Mother tongue \\
-English     &  	Excellent, C2 \\
-Spanish     &   Starting \\
+Persian     &	Native \\
+English     &  	Advanced, C1 \\
 \end{tabularcv}
 
 \section*{interests}
-Soccer, Ping-Pong, Language Exchange Meetups, Watching Movies.
+Soccer, Ping-Pong, Language Exchange Meetups, Movies
     
 \end{document}
 
