made some changes new

--- a/cv-VahidEtemadi.tex
+++ b/cv-VahidEtemadi.tex
@@ -95,21 +95,21 @@
 \end{tabularcv}
 \fi
 \section*{skills}
-\begin{tabularcv}
-Programming Languages & Java, C\#, Python (intermediate)\\
 
-Web &  JavaScript, CSS, HTML5\\
+Programming Languages: Java, C\#, Python (intermediate)
 
-Databases & MS SQL server, MySQL, Elasticsearch\\
+Web: JavaScript, CSS, HTML5
 
-Operating systems & Windows, Linux\\
+Databases: MS SQL server, MySQL, Elasticsearch
 
-Software Design Tools & Visual Paradigm\\
+Operating systems: Windows, Linux
 
-Software Development Frameworks & .NET framework, Django (intermediate)\\
+Software Design Tools: Visual Paradigm
 
-Cloud & Docker
-\end{tabularcv}
+Software Development Frameworks: .NET framework, Django (intermediate)
+
+Cloud: Docker
+
 \section*{languages}
 \begin{tabularcv}
 Persian     &	Native \\
