added some changes

--- a/cv-VahidEtemadi.tex
+++ b/cv-VahidEtemadi.tex
@@ -86,28 +86,38 @@
               	\\
 \end{tabularcv}   
 
-\section*{awards}
-% Use \link{URL} to place an link. It inserts a fontawsome logo, where the color is determined from the color harmony settings.
-\begin{tabularcv}	
-2010        &   Winner of \emph{Turing} contest in Lancaster 
-                ($\pm$ 431 contenders). \link{http://someurl.com/}
-\end{tabularcv}
+\iffalse
+	\section*{awards}
+	% Use \link{URL} to place an link. It inserts a fontawsome logo, where the color is determined from the color harmony settings.
+	\begin{tabularcv}
+	2010        &   Winner of \emph{Turing} contest in Lancaster 
+	($\pm$ 431 contenders). \link{http://someurl.com/}
+	\end{tabularcv}
+\fi
+
+
+
 
 \section*{software skills}
-Programing Languages: Java, C\#, JavaScript
+Programing Languages: Java, C\#, Python (Learning)
 
-Databases: 
+Databases: MS SQL Server, MySQL (Relational), Elasticsearch (NoSQL) 
 
-Operating systems: Windows, Linux.
+Operating systems: Windows, Linux
 
-Software Design Tools: 
+Software Design Tools: Visual Paradigm, UML Rational Rose
 
+Web: ASP.NET, HTML, CSS, JavaScript
+
+Architecture; Methodologies: Object-Oriented Design, UML, RUP, N-Tier, Data Modeling, Client-Server, Service-Oriented
+
+Analytical Tools: Weka, Gephi
 
 \section*{languages}
 \begin{tabularcv}
 Persian     &	Mother tongue \\
 English     &  	Excellent, C2 \\
-Spanish     &   Starting \\
+Spanish     &   Beginner \\
 \end{tabularcv}
 
 \section*{interests}
