github account username has been changed

--- a/cv-VahidEtemadi.tex
+++ b/cv-VahidEtemadi.tex
@@ -5,7 +5,9 @@
     changecolor={111, 156, 45}, 
 %    titlecolor=second,
 %    colorharmony={wheel,1,3}, 
-]{cv-roald}
+]
+\usepackage{fontawesome}
+{cv-roald}
 % Available options for cv-roald documentclass: 
 % 
 % - changecolor = {R, G, B} (default: {169, 53, 40} = sharelatex lion red)
@@ -42,7 +44,7 @@
   \faMobile \FAspace +98 9365433074 \sep% 
   \faEnvelope \FAspace vetemadi87@gmail.com \sep% 
   \faLinkedinSquare /in/vahidetemadi \sep%
-  \faGithub /vahid133 %
+  \faGithub /vahidetemadi %
   }
 
 % Add a picture to the top right of the page. Comment or delete if you do not 
@@ -122,7 +124,7 @@ English     &  	Advanced, C1 \\
 \end{tabularcv}
 
 \section*{Interests}
-Soccer, Ping-Pong, Language Exchange Meetups, Movies
+Soccer, Ping-Pong, Movies
     
 \end{document}
 
