--- a/cv-VahidEtemadi.tex
+++ b/cv-VahidEtemadi.tex
@@ -2,12 +2,10 @@
 % Run with XeLaTeX
 
 \documentclass[
-    changecolor={111, 156, 45}, 
+    changecolor={111, 156, 45}
 %    titlecolor=second,
 %    colorharmony={wheel,1,3}, 
-]
-\usepackage{fontawesome}
-{cv-roald}
+]{cv-roald}
 % Available options for cv-roald documentclass: 
 % 
 % - changecolor = {R, G, B} (default: {169, 53, 40} = sharelatex lion red)
@@ -40,15 +38,15 @@
 % You can use FontAwesome icons and use \FAspace after a font awesome icon to
 % insert a predefined horizontal space after a font awesome icon icon.
 \header{Vahid}{Etemadi}{%
-  \faMapMarker \FAspace Modaress BLVD \sep Shiraz \sep Iran}{%
-  \faMobile \FAspace +98 9365433074 \sep% 
+  \faMapMarker \FAspace Modaress BLVD \sep Shiraz \sep Iran \sep \faMobile \FAspace +98 9365433074 }{%
   \faEnvelope \FAspace vetemadi87@gmail.com \sep% 
   \faLinkedinSquare /in/vahidetemadi \sep%
-  \faGithub /vahidetemadi %
+  \faGithub /vahidetemadi%
   }
 
 % Add a picture to the top right of the page. Comment or delete if you do not 
 % want a picture
+
 \photo{Vahid}
 
 \textit{Make at least one definite move daily towards your goal. (Bruce Lee)}
@@ -62,7 +60,7 @@
                 \newline Software Change Management as A Service: A Self Adaptive Approach
                 \begin{itemize}
                   \item Proposing a new method for Task Assignment problem during software development  
-                  \item Design and implement a Self-Adaptive Task Assignment system to Reduce the project cost over time 
+                  \item Design and implement a Self-Adaptive Task Assignment system to Reduce overall software project cost 
                   %\item Taking into Account The New Metric, Information Diffusion, in Task Assignment
                 \end{itemize} 
                 \\
@@ -77,7 +75,7 @@
 
 \section*{Work Experience}
 \begin{tabularcv}
-2015-2017   &   \worktitle{Software Full Stack Developer}{Company ASAN (Iran)}
+2015-2017   &   \worktitle{Software Developer}{Company ASAN (Iran)}
                 \newline Developing Software for Internet Service Provider Company
                 \begin{itemize}
                 % Example use of *maincolor* and *secondcolor* in the main document.    
@@ -124,7 +122,7 @@ English     &  	Advanced, C1 \\
 \end{tabularcv}
 
 \section*{Interests}
-Soccer, Ping-Pong, Movies
+Soccer (Watching), Ping-Pong, Running, Movies
     
 \end{document}
 
